eks/load_balance.yaml
apiVersion: v1
kind: Service
metadata:
  name: gadgethub-ingress-controller
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      targetPort: 80
    - port: 443
      name: https
      targetPort: 443
  selector:
    app: gadgethub-ingress
