eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gadgethub-api-service
spec:
  selector:
    app: gadgethub-api
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
