eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gadgethub-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "connectly.devpolitano.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gadgethub-api-service
            port:
              number: 80
  tls:
  - hosts:
    - connectly.devpolitano.com
    secretName: gadgethub-api-cert
